--- a/week-7/CSS-animations/style/css/style.css
+++ b/week-7/CSS-animations/style/css/style.css
@@ -1,6 +1,138 @@
-/* line 1, /Users/timrosenberg/Documents/GitHub/tts/week-6/master-template/style/sass/style.scss */
+/* line 1, /Users/timrosenberg/Documents/GitHub/tts/week-7/CSS-animations/style/sass/style.scss */
+.timeline, body, .sky, .sun {
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+}
+
+/* line 7, /Users/timrosenberg/Documents/GitHub/tts/week-7/CSS-animations/style/sass/style.scss */
 body {
-  background: blue;
+  background-color: darkgreen;
+  animation-name: ground;
+}
+
+/* line 13, /Users/timrosenberg/Documents/GitHub/tts/week-7/CSS-animations/style/sass/style.scss */
+.sky {
+  height: 600px;
+  width: 100%;
+  background-color: skyblue;
+  padding-top: calc(300px - 25px);
+  overflow: hidden;
+  animation-name: skylight;
+}
+
+/* line 23, /Users/timrosenberg/Documents/GitHub/tts/week-7/CSS-animations/style/sass/style.scss */
+.sun {
+  background-color: yellow;
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  animation-name: sunset;
+}
+
+@-webkit-keyframes sunset {
+  0% {
+    background-color: white;
+    transform: translate(-50vw, 300px) scale(3, 3);
+  }
+  25% {
+    background-color: pink;
+  }
+  40% {
+    box-shadow: 0px 0px 20px yellow;
+    background-color: yellow;
+  }
+  50% {
+    transform: translate(0px, 0px);
+  }
+  60% {
+    box-shadow: 0px 0px 20px yellow;
+    background-color: yellow;
+  }
+  75% {
+    background-color: lavender;
+  }
+  100% {
+    background-color: white;
+    transform: translate(50vw, 300px) scale(3, 3);
+  }
+}
+
+@-webkit-keyframes skylight {
+  0% {
+    background-color: lightpink;
+  }
+  25% {
+  }
+  40% {
+    background-color: skyblue;
+  }
+  50% {
+  }
+  60% {
+    background-color: skyblue;
+  }
+  75% {
+    background-color: orange;
+  }
+  100% {
+    background-color: purple;
+  }
+}
+
+@-webkit-keyframes ground {
+  0% {
+    background-color: purple;
+  }
+  25% {
+  }
+  40% {
+    background-color: #474;
+  }
+  50% {
+  }
+  60% {
+    background-color: #474;
+  }
+  75% {
+    background-color: brown;
+  }
+  100% {
+    background-color: #405;
+  }
+}
+
+/* CSS */
+/* line 137, /Users/timrosenberg/Documents/GitHub/tts/week-7/CSS-animations/style/sass/style.scss */
+.exampleClass {
+  animation-name: myFirstAnimation;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-iteration-count: 3;
+  animation-direction: normal;
+  transform: scale(0.4, 2.4);
+  text-align: center;
+  border: solid 1px black;
+}
+
+@-webkit-keyframes mySecondAnimation {
+  0% {
+    transform: rotate(0deg);
+    transform: translate(0px, 0px);
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: rotate(180deg);
+    transform: translate(0px, 10px);
+    transform: scale(2, 2);
+  }
+  100% {
+    transform: rotate(360deg);
+    transform: translate(0px, 20px);
+    transform: scale(3, 3);
+  }
 }
 
 /*# sourceMappingURL=../css/style.map */
